<resources>
    <string name="app_name">ExoPlayer</string>

    <string name="cd_album_art">Album Art</string>
    <string name="cd_btn_next">Btn Next</string>
    <string name="cd_play_pause">Btn Play/Pause</string>
    <string name="cd_btn_back">Btn Back</string>
    <string name="cd_more_menu">More menu</string>
    <string name="cd_btn_repeat">Btn repeat</string>
    <string name="cd_playlist">Playlist</string>
    <string name="cd_btn_previous">Btn Previous</string>

    <string name="notification_channel_name"> Music Player Notification Channel</string>
    <string name="favorite">Favorite</string>
    <string name="music_player">Music Player</string>
    <string name="txt_video_player">Video Player</string>
    <string name="txt_music_player">Music Player</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="more">More</string>
    <string name="folder">Folder</string>
    <string name="replay">Replay</string>
    <string name="forward">forward</string>
</resources>