<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.MusicListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darker_gray"
        android:orientation="vertical"
        android:padding="@dimen/_3sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_player"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_musicPlayerHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_toolbar">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/songInRun"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/songInRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkest_gray"
            android:padding="@dimen/_15sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/imgV_musicThumbnail"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:contentDescription="@string/cd_album_art"
                android:src="@drawable/img_boy_listening"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_currentSong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="@id/imgV_musicThumbnail"
                app:layout_constraintEnd_toStartOf="@id/imgV_playPause"
                app:layout_constraintStart_toEndOf="@id/imgV_musicThumbnail"
                app:layout_constraintTop_toTopOf="@id/imgV_musicThumbnail"
                tools:text="Music name" />

            <ImageView
                android:id="@+id/imgV_playPause"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/cd_play_pause"
                android:src="@drawable/round_pause_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imgV_next"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/yellow" />

            <ImageView
                android:id="@+id/imgV_next"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/cd_btn_next"
                android:src="@drawable/round_skip_next_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/yellow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/layout_musicPlay"
        layout="@layout/layout_music_play" />

</androidx.constraintlayout.widget.ConstraintLayout>